# hf-train

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-05-24-hf-train-v1.md
docs/specs/: 2026-05-24-hf-train-design.md
examples/: causal_lm_finetune_llama.yaml  causal_lm_from_scratch.yaml  image_classification_vit.yaml  semantic_segmentation_segformer.yaml
src/hf_train/: __init__.py  cli.py
src/hf_train/backend/: __init__.py  base.py  cpu.py  cuda.py  xpu.py
src/hf_train/config/: __init__.py  defaults.py  schema.py
src/hf_train/output/: __init__.py  writer.py
src/hf_train/tasks/: __init__.py  base.py  causal_lm.py  image_classification.py  semantic_segmentation.py
src/hf_train/train/: callbacks.py  runner.py
tests/: conftest.py
tests/fixtures/configs/: causal_lm_minimal.yaml  image_classification_minimal.yaml  semantic_segmentation_minimal.yaml
tests/integration/: test_causal_lm_handler.py  test_image_classification_handler.py  test_semantic_segmentation_handler.py  test_smoke_causal_lm.py  test_smoke_image_classification.py  test_smoke_semantic_segmentation.py
tests/unit/: test_backend.py  test_callbacks.py  test_config.py  test_output.py
